dataset1235/2025-2/610742602/users/1972734523/executions/677928262_2667036473.log
== RUN (2025-08-28 21:05:37)
-- CODE: 
celsius = float(input("Digite o valor da temperatura em Celsius 
para a conversão em Kelvin:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:12:55)
-- CODE: 
c = input("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")

celsius = float(c)
kelvin = round(celsius + 273.15, 2)

print(kelvin)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:07:45)
-- CODE: 
celsius = input("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")

kelvin = celsius + 273.15

print(round(kelvin), 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    kelvin = celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    kelvin = celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    kelvin = celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    kelvin = celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    kelvin = celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    kelvin = celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:18:02)
-- CODE: 
C=input("Digite o valor do Celsius para a conversão em Kelvin:")

celsius=float(C)

kelvin=round(celsius+273.15,2)

print(kelvin)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite o valor do Celsius para a conversão em Kelvin:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite o valor do Celsius para a conversão em Kelvin:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite o valor do Celsius para a conversão em Kelvin:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite o valor do Celsius para a conversão em Kelvin:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite o valor do Celsius para a conversão em Kelvin:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite o valor do Celsius para a conversão em Kelvin:303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:05:04)
-- CODE: 
celsius = float(input("Digite o valor da temperatura em Celsius:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite o valor da temperatura em Celsius:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite o valor da temperatura em Celsius:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite o valor da temperatura em Celsius:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite o valor da temperatura em Celsius:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite o valor da temperatura em Celsius:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite o valor da temperatura em Celsius:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:12:02)
-- CODE: 
c = input("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")

celsius = float(c)
kelvin = round(celsius, 2)

print(kelvin)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:20.25
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:-10.0
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:-40.0
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:100.0
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:0.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:30.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:08:02)
-- CODE: 
celsius = float("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")

kelvin = celsius + 273.15

print(round(kelvin), 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor da temperatura em Celsius para a conversão em Kelvin:'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor da temperatura em Celsius para a conversão em Kelvin:'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor da temperatura em Celsius para a conversão em Kelvin:'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor da temperatura em Celsius para a conversão em Kelvin:'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor da temperatura em Celsius para a conversão em Kelvin:'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor da temperatura em Celsius para a conversão em Kelvin:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:08:25)
-- CODE: 
celsius = float(input("Digite o valor da temperatura em Celsius para a conversão em Kelvin:"))

kelvin = celsius + 273.15

print(round(kelvin), 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:293 2
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:263 2
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:233 2
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:373 2
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:273 2
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:304 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:07:25)
-- CODE: 
celsius = float(input("Digite o valor da temperatura em Celsius para a conversão em Kelvin:"))

kelvin = celsius + 273.15

print(round(kelvin), 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:293 2
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:263 2
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:233 2
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:373 2
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:273 2
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:304 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:08:01)
-- CODE: 
celsius = float("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")

kelvin = celsius + 273.15

print(round(kelvin), 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor da temperatura em Celsius para a conversão em Kelvin:'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor da temperatura em Celsius para a conversão em Kelvin:'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor da temperatura em Celsius para a conversão em Kelvin:'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor da temperatura em Celsius para a conversão em Kelvin:'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor da temperatura em Celsius para a conversão em Kelvin:'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float("Digite o valor da temperatura em Celsius para a conversão em Kelvin:")
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor da temperatura em Celsius para a conversão em Kelvin:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:05:36)
-- CODE: 
celsius = float(input("Digite o valor da temperatura em Celsius 
para a conversão em Kelvin:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:05:26)
-- CODE: 
celsius = float(input("Digite o valor da temperatura em Celsius para a conversão em Kelvin:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:08:14)
-- CODE: 
celsius = float(input("Digite o valor da temperatura em Celsius para a conversão em Kelvin:"))

kelvin = celsius + 273.15

print(round(kelvin), 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:293 2
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:263 2
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:233 2
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:373 2
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:273 2
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite o valor da temperatura em Celsius para a conversão em Kelvin:304 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:05:39)
-- CODE: 
celsius = float(input("Digite o valor da temperatura em Celsius 
para a conversão em Kelvin:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:05:38)
-- CODE: 
celsius = float(input("Digite o valor da temperatura em Celsius 
para a conversão em Kelvin:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite o valor da temperatura em Celsius 
                          ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
